2011ページにリダイレクトするようにしました

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
-<html>
-  <head>
-  </head>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
+<head>
+	<meta charset="UTF-8" />
+	<title>nodefest.jp</title>
+	<script type="text/javascript">
+		setTimeout(function(){
+			location.href = location.href.replace(/\/[^/]*$/, '') + '/2011';
+		}, 1000);
+	</script>
+</head>
   <body>
+    <div style="width: 100%; margin: 0 auto; text-align: center;">
+      <a href="/2011/">
+         <p><img src="2011/images/logo.png" alt="東京Node学園祭" /></p>
+         <p>東京Node学園祭 2011</p>
+      </a>
+    </div>
   </body>
 </html>
