--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>東京Node学園祭2013</title>
 <meta name="description" content="">
-<meta name="viewport" content="width=1024">
+<meta name="viewport" content="width=1040">
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -172,7 +172,7 @@
 	<div class="mod-pageSide">
 		<nav class="mod-nav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li class="mod-nav--current"><a href="#">Home</a></li>
 				<li><a href="#">Session</a></li>
 				<li><a href="#">Speakers</a></li>
 				<li><a href="#">Sponsors</a></li>
@@ -219,12 +219,46 @@
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
 
-		<div class="mod-sideItem">
+		<section class="mod-sideItem">
 			<a href="https://twitter.com/nodefest" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @nodefest</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		</div>
+		</section>
+
+		<section class="mod-sideItem">
+
+			<div class="mod-sideItem-heading">Sponsors</div>
+
+			<div class="mod-sponsorLogo">
+				<a href="#">
+					<img src="http://img.pxgrid.net/200x80" width="200" height="80" alt="">
+				</a>
+			</div>
+
+			<div class="mod-sponsorLogo">
+				<a href="#">
+					<img src="http://img.pxgrid.net/200x80" width="200" height="80" alt="">
+				</a>
+			</div>
+
+			<div class="mod-sideItem-heading">Supporters</div>
+
+			<div class="mod-sponsorLogo">
+				<a href="#">
+					<img src="http://img.pxgrid.net/200x80" width="200" height="80" alt="">
+				</a>
+			</div>
+
+			<div class="mod-sponsorLogo">
+				<a href="#">
+					<img src="http://img.pxgrid.net/200x80" width="200" height="80" alt="">
+				</a>
+			</div>
+
+		</section>
 
 	</div>
+
+	<div class="mod-pagetop"></div>
 
 </div>
 
