all parts are compreted

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=1040">
 <link rel="stylesheet" href="assets/css/style.css">
+<script src="assets/js/vendor/modernizr.custom.js"></script>
 </head>
 <body>
 
