ready for making all pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
 
 <div class="mod-pageBody">
-	<div class="mod-pageMain">
+	<div class="mod-pageMain"><!-- LazyJaxDavis start -->
 
 		<section class="mod-section">
 			<div class="mod-heading">
@@ -168,16 +168,16 @@
 			<p>当日受付にて、プレスである旨を告げ、プレス用カードを受け取ったうえでご入場ください。この際、御名刺をいただきたく存じますので、ご用意をよろしくお願い致します。</p>
 
 		</section>
-	</div>
+	<!-- LazyJaxDavis end --></div>
 
 	<div class="mod-pageSide">
 		<nav class="mod-nav">
 			<ul>
-				<li class="mod-nav--current"><a href="#">Home</a></li>
-				<li><a href="#">Session</a></li>
-				<li><a href="#">Speakers</a></li>
-				<li><a href="#">Sponsors</a></li>
-				<li><a href="#">Access</a></li>
+				<li class="mod-nav--current"><a href="index.html">Home</a></li>
+				<li><a href="sessions.html">Session</a></li>
+				<li><a href="speakers.html">Speakers</a></li>
+				<li><a href="sponsors.html">Sponsors</a></li>
+				<li><a href="access.html">Access</a></li>
 			</ul>
 		</nav>
 
@@ -266,9 +266,14 @@
 <footer class="mod-pageFooter">
 	<div class="mod-pageFooter-inner">
 		<div class="mod-pageFooter-copyright">© 2012 東京 Node 学園祭 実行委員会 | <a href="#">Node.js 日本ユーザグループ</a></div>
-		<div class="mod-pageFooter-createdBy">This site is created by <a href="#">PixelGrid, Inc.</a> and <a href="#">SINAP, Inc.</a></div>
+		<div class="mod-pageFooter-createdBy">This Web site was created by <a href="#">PixelGrid, Inc.</a> and <a href="#">SINAP, Inc.</a></div>
 	</div>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="assets/js/vendor/davis.js"></script>
+<script src="assets/js/vendor/jquery.lazyjaxdavis.min.js"></script>
+<script src="assets/js/src/js.js"></script>
 
 </body>
 </html>
