--- a/_styleGuide.html
+++ b/_styleGuide.html
@@ -23,7 +23,7 @@
 </header>
 
 <div class="mod-pageBody">
-	<div class="mod-pageMain">
+	<div class="mod-pageMain"><!-- LazyJaxDavis start -->
 
 		<section class="mod-section">
 			<div class="mod-heading">
@@ -230,16 +230,16 @@
 
 		</section>
 
-	</div>
+	<!-- LazyJaxDavis end --></div>
 
 	<div class="mod-pageSide">
 		<nav class="mod-nav">
 			<ul>
-				<li class="mod-nav--current"><a href="#">Home</a></li>
-				<li><a href="#">Session</a></li>
-				<li><a href="#">Speakers</a></li>
-				<li><a href="#">Sponsors</a></li>
-				<li><a href="#">Access</a></li>
+				<li class="mod-nav--current"><a href="index.html">Home</a></li>
+				<li><a href="session.html">Session</a></li>
+				<li><a href="speakers.html">Speakers</a></li>
+				<li><a href="sponsors.html">Sponsors</a></li>
+				<li><a href="access.html">Access</a></li>
 			</ul>
 		</nav>
 
@@ -333,6 +333,11 @@
 		<div class="mod-pageFooter-createdBy">This site is created by <a href="#">PixelGrid, Inc.</a> and <a href="#">SINAP, Inc.</a></div>
 	</div>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="assets/js/vendor/davis.js"></script>
+<script src="assets/js/vendor/jquery.lazyjaxdavis.min.js"></script>
+<script src="assets/js/src/js.js"></script>
 
 </body>
 </html>
