removed a bg-image

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
 		</div>
 
 		<div class="mod-twitterTimeline">
+			<div class="mod-twitterTimeline-title">nodefest on twitter</div>
+			<div class="mod-twitterTimeline-subTitle">「東京Node学園祭」についてのツイート</div>
 			<a class="twitter-timeline" href="https://twitter.com/Takazudo/pxgplus" data-widget-id="369885125518958592" width="300" height="500" >@Takazudo/pxgplus からのツイート</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		</div>
