--- a/speakers.html
+++ b/speakers.html
@@ -28,12 +28,50 @@
 		<section class="mod-section">
 			<div class="mod-heading">
 				<h1>
-					<span class="mod-heading-en">Sponsors</span>
+					<span class="mod-heading-en">Speakers</span>
 					<span class="mod-heading-ja">登壇者紹介</span>
 				</h1>
 			</div>
 
-			コンテンツ内容不明
+			コンテンツ内容不明<div class="mod-speaker">
+				<div class="mod-speaker-image">
+					<img src="img/speaker_img_01.jpg" height="130" width="130" alt="">
+				</div>
+				<div class="mod-speaker-name">高林 貴仁</div>
+				<p><a href="#">リクルートテクノロジーズ/Advanced Technology Lab</a>所属。脳波データを利用してスロットカーを動かしてみました。Node( 脳DE).jsのバックエンドに関して紹介致します。</p>
+			</div>
+
+			<div class="mod-speaker">
+				<div class="mod-speaker-image">
+					<img src="img/speaker_img_02.jpg" height="130" width="130" alt="">
+				</div>
+				<div class="mod-speaker-name">大津 繁樹</div>
+				<p><a href="#">株式会社インターネットイニシアティブ</a>所属。SI エンジニア・コンサルタント、サービスエンジニアを経て現在Node.js、HTML5 などアプリケーション新技術の検証・評価を中心に行っています。最近はNode にずっぽりはまり、毎朝コミットログをチェックするのが日課になってます。</p>
+			</div>
+
+			<div class="mod-speaker">
+				<div class="mod-speaker-image">
+					<img src="img/speaker_img_03.jpg" height="130" width="130" alt="">
+				</div>
+				<div class="mod-speaker-name">Jon Keating</div>
+				<p><a href="#">Geeklist</a>という開発者向けのSNSのSr. Software Engineerです。10年以上C++の経験を持ち、Node v0.4の頃からNode.jsに乗り換えました。元はヤフーでログイン、動画システム、Y!ボックスのバックエンドエンジニアです。</p>
+			</div>
+
+			<div class="mod-speaker">
+				<div class="mod-speaker-image">
+					<img src="img/speaker_img_04.jpg" height="130" width="130" alt="">
+				</div>
+				<div class="mod-speaker-name">swdyh</div>
+				<p>Webページの自動つぎ足しを行うAutoPagerize(http://autopagerize.net) というブラウザ拡張機能をつくっています。その他の活動は<a href="#">Github</a> や<a href="#">ブログ</a>を見てください。</p>
+			</div>
+
+			<div class="mod-speaker">
+				<div class="mod-speaker-image">
+					<img src="img/speaker_img_05.jpg" height="130" width="130" alt="">
+				</div>
+				<div class="mod-speaker-name">Constellation</div>
+				<p>ECMA262 5.1th に準拠するEngine、iv/lv5を作成し最適化を行なっています。また、ECMAScript parserである<a href="#">Esprima</a>のcommitterや、ASTから<a href="#">ECMAScript</a>を生成するEscodegenのownerをしています。</p>
+			</div>
 
 		</section>
 
