--- a/src/static/_canvas/5_socket2.html
+++ b/src/static/_canvas/5_socket2.html
@@ -1,9 +1,6 @@
- <!DOCTYPE html>
-<html lang="ja" class="no-js">
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width">
 <title></title>
 <style>
 body{margin: 0;padding: 0;}
@@ -14,7 +11,8 @@ canvas{display: block;}
 
 <div id="bg"></div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="http://localhost:8000/socket.io/socket.io.js"></script> 
 <script>
 
 var DOT_RADIUS = 3;
@@ -38,14 +36,17 @@ $canvas.attr( {
 ctx = $canvas[ 0 ].getContext( '2d' );
 // var startTime = timestamp = Date.now();
 
-
-var points = [
-  //{
-  //  x: 200,
-  //  y: 100,
-  //  timestamp: Date.now() - 500
-  //}
-];
+var me = {
+  id : null,
+  points : [
+    //{
+    //  x: 200,
+    //  y: 100,
+    //  timestamp: Date.now()
+    //}
+  ]
+};
+var players = {};
 
 var myMouseX, myMouseY;
 $( window ).on( 'mousemove', function ( e ) {
@@ -59,30 +60,54 @@ function plot () {
     y: myMouseY,
     timestamp: Date.now()
   }
-  points.push( data );
-  if ( points.length > 5 ) {
-    points.shift();
+  me.points.push( data );
+  if ( me.points.length > 5 ) {
+    me.points.shift();
   }
 }
 var protInterval = setInterval( plot, 500 );
 
-// var startTime = Date.now();
 ( function drawPoints () {
+  var i, j, l;
   var now = Date.now();
-  // var elapsedTime = now - startTime;
-  // if( elapsedTime < 20000 ) {
-    requestAnimationFrame( drawPoints );
-  // }
+  RAF( drawPoints );
+  // setTimeout( drawPoints, 5000 )
+
   $canvas[ 0 ].width = $canvas[ 0 ].width;
 
-  for ( var i = 0, l = points.length; i < l; i ++ ) {
+  for ( i in players ) {
+    ( function () {
+      if ( me.id === i ) {
+        return;
+      }
+      var points = players[ i ].points;
+      for ( j = 0, l = points.length; j < l; j ++ ) {
+        if ( j != 0 ) {
+          var x1 = points[ j - 1 ].x;
+          var y1 = points[ j - 1 ].y;
+        }
+        var x2 = points[ j ].x;
+        var y2 = points[ j ].y;
+        var timestamp = points[ j ].timestamp * 1;
+
+        var progress = Math.min( ( now - timestamp ) / 2000, 1 );
+
+      // console.log( timestamp, ( now - timestamp ) / 2000 );
+      // console.log( x1, y1, x2, y2, progress );
+        drawLine( x1, y1, x2, y2, progress );
+        drawDot( x2, y2, progress );
+      }
+    } )();
+  }
+
+  for ( i = 0, l = me.points.length; i < l; i ++ ) {
     if ( i != 0 ) {
-      var x1 = points[ i - 1 ].x;
-      var y1 = points[ i - 1 ].y;
+      var x1 = me.points[ i - 1 ].x;
+      var y1 = me.points[ i - 1 ].y;
     }
-    var x2 = points[ i ].x;
-    var y2 = points[ i ].y;
-    var timestamp = points[ i ].timestamp;
+    var x2 = me.points[ i ].x;
+    var y2 = me.points[ i ].y;
+    var timestamp = me.points[ i ].timestamp;
     var progress = Math.min( ( now - timestamp ) / 2000, 1 );
     drawLine( x1, y1, x2, y2, progress );
     drawDot( x2, y2, progress );
@@ -183,8 +208,28 @@ function getLocalProgress ( min, max, progress ) {
   return ( progress - min ) * 1 / ( max - min );
 }
 
-</script>
+//---- sockets
 
+var socket = io.connect('http://localhost:8000');
+
+socket.on('connect', function() {
+  socket.emit( 'client_firstConnect', me );
+} );
+
+socket.on( 'server_myId', function ( params ) {
+  me.id = params.myID;
+  players = params.players;
+  // console.log( 'my ID is ' + params.myID, players );
+} );
+
+socket.on( 'server_sync', function ( allPlayers ) {
+  players = allPlayers;
+  // console.log( players );
+  if ( !!me.id ) {
+    socket.emit( 'client_pushMyData', me );
+  }
+});
+</script>
 
 </body>
 </html>
