JSとCSSを絶対パスにする

--- a/_html/index.html
+++ b/_html/index.html
@@ -12,8 +12,8 @@
 <meta property="og:url" content="http://nodefest.jp/2014/">
 <meta property="og:image" content="http://nodefest.jp/2014/assets/img/logo.png">
 <meta property="og:description" content="このたびNode.js日本ユーザグループは、第3回目となるNode.jsのカンファレンス「東京Node学園祭 2014」を開催いたします。今回は、{}">
-<link rel="stylesheet" href="css/main.css">
-<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+<link rel="stylesheet" href="/2014/css/main.css">
+<script src="/2014/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 <div class="l-body">
@@ -292,6 +292,6 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-<script src="js/main.js"></script>
+<script src="/2014/js/main.js"></script>
 </body>
 </html>
