スムーススクロール実装

--- a/_html/index.html
+++ b/_html/index.html
@@ -16,7 +16,7 @@
 <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-<div class="l-body">
+<div class="l-body" id="all">
 
 <header class="l-header" role="banner">
   <div class="l-header__inner">
@@ -292,8 +292,9 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
-<script src="/js/main.js"></script>
+<script src="/js/vendor/jquery.easing.min.js"></script>
+<script src="/js/vendor/easestepper.min.js"></script>
+<script src="/js/vendor/jquery.easescroller.min.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
