--- a/_html/example.html
+++ b/_html/example.html
@@ -308,6 +308,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
 <script src="./js/vendor/PeriodicEventEmitter.js"></script>
 <script src="./js/NF14.view3d.js"></script>
+<script src="http://localhost:8080/socket.io/socket.io.js"></script> 
 <script>
 
 var headerHeight = 0;//$( '.l-header' ).height();
@@ -351,22 +352,35 @@ $( window ).on( 'resize', function ( e ) {
 // socket 利用時の例
 ////////////////////////
 
+var socket = io( 'http://localhost:8080' );
+
 // 閲覧者が花火を打ち上げると 'userinput:fire' イベントが発火します
 // これをソケットサーバに送ってください。
-viewport.addEventListener( 'userinput:fire', function ( position, text ) {
+viewport.addEventListener( 'userinput:fire', function ( fire ) {
 
-  console.log( position, text );
-  // socket.emit( 'client_fire', position, text );
+  // console.log( fire.position, fire.text );
+  var data = {
+    x: fire.position.x,
+    y: fire.position.y,
+    z: fire.position.z, 
+    text: fire.text
+  }
+  console.log( data );
+  socket.emit( 'server_fire', data );
 
 } );
 
 
-// socket.on( 'server_fire', function ( pos, text ) {
+socket.on( 'client_fire', function ( data ) {
 
-//   console.log( position, text );
-//   new NF14.view3d.Fire( position, text, viewport );
+  var position = new THREE.Vector3(
+    data.x,
+    data.y,
+    data.z
+  );
+  new NF14.view3d.Fire( position, data.text, viewport );
 
-// } );
+} );
 
 </script>
 
