ヘルプ実装

--- a/_html/index.html
+++ b/_html/index.html
@@ -48,6 +48,15 @@
       </nav>
     </div>
   </div>
+  <div class="l-header__help">
+    <div class="help">
+      <div class="help__button">?</div>
+      <ul class="help__list">
+        <li>Enterで入力フォームが出現し、テキスト入力後のEnterで花火が打ち上がります。</li>
+        <li>ドラッグで様々な角度から、みんなの花火を観察できます。</li>
+      </ul>
+    </div>
+  </div>
 </header>
 
 <section class="l-intro">
