残ってたアイコン全部入れた

--- a/_html/index.html
+++ b/_html/index.html
@@ -38,12 +38,12 @@
       </div>
       <nav class="l-header__nav" role="navigation">
         <ul class="nav">
-          <li><a href="/2014/index.html"><span class="icon icon-home"></span><div>Home</div></a></li>
-          <li><a href="/2014/session.html"><span class="icon icon-session"></span><div>Sessions</div></a></li>
-          <li><a href="/2014/speaker.html"><span class="icon icon-speaker"></span><div>Speakers</div></a></li>
-          <li><a href="/2014/sponsor.html"><span class="icon icon-sponsor"></span><div>Sponsors</div></a></li>
-          <li><a href="/2014/access.html"><span class="icon icon-access"></span><div>Access</div></a></li>
-          <li><a href="{}"><span class="icon icon-entry"></span><div>Entry</div></a></li>
+          <li class="nav__item"><a href="/2014/index.html"><i class="icon icon-home"></i><div>Home</div></a></li>
+          <li class="nav__item"><a href="/2014/session.html"><i class="icon icon-session"></i><div>Sessions</div></a></li>
+          <li class="nav__item"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speakers</div></a></li>
+          <li class="nav__item"><a href="/2014/sponsor.html"><i class="icon icon-sponsor"></i><div>Sponsors</div></a></li>
+          <li class="nav__item"><a href="/2014/access.html"><i class="icon icon-access"></i><div>Access</div></a></li>
+          <li class="nav__item nav__item--entry"><a href="{}"><i class="icon icon-entry"></i><div>Entry<i class="nav__textIcon icon icon-external"></i></div></a></li>
         </ul>
       </nav>
     </div>
@@ -52,8 +52,14 @@
     <div class="help">
       <div class="help__button">?</div>
       <ul class="help__list">
-        <li>Enterで入力フォームが出現し、テキスト入力後のEnterで花火が打ち上がります。</li>
-        <li>ドラッグで様々な角度から、みんなの花火を観察できます。</li>
+        <li>
+          <i class="help__icon icon icon-fireworks"></i>
+          <p class="help__text">Enterで入力フォームが出現し、テキスト入力後のEnterで花火が打ち上がります。</p>
+        </li>
+        <li>
+          <i class="help__icon icon icon-drag"></i>
+          <p class="help__text">ドラッグで様々な角度から、みんなの花火を観察できます。</p>
+        </li>
       </ul>
     </div>
   </div>
