会長の修正してくれたaboutをappの方に反映

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://nodefest.jp/2015/">
 <meta property="og:image" content="http://nodefest.jp/2015/images/touch/ogimage.png">
-<meta property="og:description" content="このたびNode.js日本ユーザグループは、Domenic Denicola氏、Kat Marchán氏、Rod Vagg氏を招聘し、6回目の「東京Node学園祭」を開催します。">
+<meta property="og:description" content="このたびNode.js日本ユーザグループは、ECMAScriptの仕様化、Promiseを仕様にしたことでも有名なDomenic Denicola、io.jsのリリースオーサーであり、NANというネイティブモジュール作成用のライブラリを開発しているRod Vagg、NodeUpのオーガナイザーであり、企業向けのNode.jsにも詳しいDan Show、npmの開発者であるKat Marchanを招聘し、6回目の「東京Node学園祭」を開催します。">
 
 <!-- build:css styles/main.css -->
 <link rel="stylesheet" href="styles/roboto.css">
@@ -92,8 +92,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 </header>
                 <div class="nf-frame-section__body">
                   <div class="nf-paragraphs">
-                    <p>WebSocketの普及により実現されつつあるリアルタイムWebとそれに伴って現実となりつつあるC10K問題。これらへのソリューションとして世界中から注目されているのが、サーバサイドJavaScriptプラットフォームのNode.jsです。</p>
-                    <p>このたびNode.js日本ユーザグループは、OpenDataプロジェクトに従事しつつクライアントのモジュールを多く作成しているMaxwell Ogden氏、Automattic CTOであり、socket.ioの作者であるGuillermo Rauch氏、expressを管理しているStrongLoopという会社のCEOであるIssac Roth氏、NodeConfの主催者であり、Node.jsのコミュニティを支える中心人物であるMikeal Rogers氏を招聘し、5回目の「東京Node学園祭」を開催します。</p>
+                    <p>近年、Node.jsを利用する機会は飛躍的に増えています。クライアントサイドのビルドモジュールやAWS Lambda, WebSocketを使ったリアルタイムウェブアプリケーション、軽量エンジンであることを活かしたIoTでの利用等、適用範囲が増えています。また昨今のECMAScript 6が仕様化されたこと、Node.jsとio.jsの分裂と統合等のドラマを経てより一層の注目が期待されます。</p>
+                    <p>このたびNode.js日本ユーザグループは、上述した流れを受けて6回目の「東京Node学園祭」を開催します。</p>
+                    <p>ゲストスピーカーにはECMAScriptの仕様化、Promiseを仕様にしたことでも有名なDomenic Denicola、io.jsのリリースオーサーであり、NANというネイティブモジュール作成用のライブラリを開発しているRod Vagg、NodeUpのオーガナイザーであり、企業向けのNode.jsにも詳しいDan Show、npmの開発者であるKat Marchanを呼ぶ予定です。</p>
                   </div>
                 </div>
                 <div class="nf-buttons">
