--- a/app/index.html
+++ b/app/index.html
@@ -351,8 +351,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </section>
                     </div>
                     <footer class="nf-coc__footer">
-                      <p style="margin-bottom:30px"><small>Original source: <a href="http://confcodeofconduct.com/">Conference Code of Conduct</a></small></p>
-                      <p class="nf-coc__admin">東京Node学園祭 実行委員会</p>
+                      <p class="nf-coc__source"><small>Original source: <a href="http://confcodeofconduct.com/">Conference Code of Conduct</a></small></p>
                     </footer>
                   </article>
                 </div>
