リンク先の設定

--- a/app/index.html
+++ b/app/index.html
@@ -123,15 +123,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </tr>
                       <tr>
                         <th>会場</th>
-                        <td><a href="#">株式会社サイバーエージェント</a><br>〒150-0043 渋谷区道玄坂1丁目12番1号渋谷マークシティウエスト 13階</td>
+                        <td><a href="2015/#!/venue">株式会社サイバーエージェント</a><br>〒150-0043 渋谷区道玄坂1丁目12番1号渋谷マークシティウエスト 13階</td>
                       </tr>
                       <tr>
                         <th>Hashtag</th>
-                        <td><a href="#">#nodefest</a> （全体）<br><a href="#">#nodefestA</a> （トラックA）<br><a href="#">#nodefestB</a> （トラックB）</td>
+                        <td><a href="https://twitter.com/search?q=%23nodefest">#nodefest</a> （全体）<br><a href="https://twitter.com/search?q=%23nodefestA">#nodefestA</a> （トラックA）<br><a href="https://twitter.com/search?q=%23nodefestB">#nodefestB</a> （トラックB）</td>
                       </tr>
                       <tr>
                         <th>Ustream</th>
-                        <td><a href="#">トラックA</a> （全体含む）、<a href="#">トラックB</a></td>
+                        <td><a href="http://www.ustream.tv/channel/nodefest2015a">トラックA</a> （全体含む）、<a href="http://www.ustream.tv/channel/nodefest2015b">トラックB</a></td>
                       </tr>
                       <tr>
                         <th>無線LAN</th>
@@ -139,11 +139,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </tr>
                       <tr>
                         <th>参加費</th>
-                        <td>1,000円（チケットは<a href="#">connpass</a>から購入できます）</td>
+                        <td>1,000円（チケットはconnpassから購入できる予定です）</td>
                       </tr>
                       <tr>
                         <th>主催</th>
-                        <td><a href="#">Node.js日本ユーザーグループ</a></td>
+                        <td><a href="http://nodejs.jp/">Node.js日本ユーザーグループ</a></td>
                       </tr>
                     </table>
                   </div>
