参加費を調整中に

--- a/app/index.html
+++ b/app/index.html
@@ -139,7 +139,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </tr>
                       <tr>
                         <th>参加費</th>
-                        <td>1,000円（チケットはconnpassから購入できる予定です）</td>
+                        <td>調整中</td>
                       </tr>
                       <tr>
                         <th>主催</th>
