--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <li>※ セッションは日本語・英語で行われます。</li>
               </ul>
             </div>
+
+            <paper-material class="nf-frame-section">
+              <section class="nf-frame-section__inner">
+                <header class="nf-frame-heading">
+                  <h1 class="nf-frame-heading__h" data-en="Call for Speakers"><span class="nf-frame-heading__h-inner">登壇者募集中</span></h1>
+                </header>
+                <div class="nf-frame-section__body">
+                  <div class="nf-paragraphs">
+                    <p>セッションおよびLTにてご登壇していただける方々を募集いたします。</p>
+                    <p>セッションの持ち時間は30分。日頃Node.jsを利用して開発を行っている皆様、東京Node学園祭で登壇してみませんか？</p>
+                    <p>また、ライトニングトークの募集についてですが、ライトニングに5分でのトークをお願いします。募集枠は5枠。</p>
+                    <p>皆様の溢れるパワーとみなぎるNode熱をお待ちしております。募集締切の期日につきましては9月30日を予定しております。</p>
+                  </div>
+                </div>
+                <div class="nf-buttons">
+                  <paper-button raised class="nf-button nf-button--register"><a href="http://goo.gl/forms/66JmdMXiU6">セッション・LTに応募する</a></paper-button>
+                </div>
+              </section>
+            </paper-material>
           </div>
         </main>
       </div>
