--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
-                  <h1 class="nf-frame-heading__h" data-en="About"><span class="nf-frame-heading__h-inner">東京Node学園祭について</span></h1>
+                  <h1 class="nf-frame-heading__h" data-en="About">東京Node学園祭について</h1>
                 </header>
                 <div class="nf-frame-section__body">
                   <div class="nf-paragraphs">
@@ -112,7 +112,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material elevation="2" class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
-                  <h1 class="nf-frame-heading__h" data-en="Event Outline"><span class="nf-frame-heading__h-inner">開催概要</span></h1>
+                  <h1 class="nf-frame-heading__h" data-en="Event Outline">開催概要</h1>
                 </header>
                 <div class="nf-frame-section__body">
                   <div class="nf-description-table">
@@ -189,7 +189,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
-                  <h1 class="nf-frame-heading__h" data-en="Call for Speakers"><span class="nf-frame-heading__h-inner">登壇者募集中</span></h1>
+                  <h1 class="nf-frame-heading__h" data-en="Call for Speakers">登壇者募集中</h1>
                 </header>
                 <div class="nf-frame-section__body">
                   <div class="nf-paragraphs">
@@ -215,7 +215,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-material class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
-                  <h1 class="nf-frame-heading__h" data-en="Special Guest Speakers"><span class="nf-frame-heading__h-inner">海外登壇者</span></h1>
+                  <h1 class="nf-frame-heading__h" data-en="Special Guest Speakers">海外登壇者</h1>
                 </header>
                 <div class="nf-frame-section__body--full">
                   <nf-speaker-list key="OVERSEAS" data-jsLoadText></nf-speaker-list>
@@ -226,7 +226,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <!-- <paper-material class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
-                  <h1 class="nf-frame-heading__h" data-en="Guest Speakers"><span class="nf-frame-heading__h-inner">登壇者</span></h1>
+                  <h1 class="nf-frame-heading__h" data-en="Guest Speakers">登壇者</h1>
                 </header>
                 <div class="nf-frame-section__body--full">
                   <nf-speaker-list key="DOMESTIC" data-jsLoadText></nf-speaker-list>
