OGPが出ないのでテスト

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="0; URL=/2015/">
+
+<!-- OGP -->
+<meta property="og:title" content="東京Node学園祭2015">
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://nodefest.jp/2015/">
+<meta property="og:image" content="http://nodefest.jp/2015/images/touch/ogimage.png">
+<meta property="og:description" content="このたびNode.js日本ユーザグループは、ECMAScriptの仕様化、Promiseを仕様にしたことでも有名なDomenic Denicola、io.jsのリリースオーサーであり、NANというネイティブモジュール作成用のライブラリを開発しているRod Vagg、NodeUpのオーガナイザーであり、企業向けのNode.jsにも詳しいDan Show、npmの開発者であるKat Marchanを招聘し、6回目の「東京Node学園祭」を開催します。">
+
 <script>
 location.replace('/2015/');
 </script>
-<title>東京Node学園祭</title>
+<title>東京Node学園祭2015</title>
 </head>
 <body>
 <a href="/2015/">東京Node学園祭2015</a>
