Update domestic speakers

--- a/app/index.html
+++ b/app/index.html
@@ -223,7 +223,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </section>
             </paper-material>
 
-            <!-- <paper-material class="nf-frame-section">
+            <paper-material class="nf-frame-section">
               <section class="nf-frame-section__inner">
                 <header class="nf-frame-heading">
                   <h1 class="nf-frame-heading__h" data-en="Guest Speakers">登壇者</h1>
@@ -232,7 +232,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   <nf-speaker-list key="DOMESTIC" data-jsLoadText></nf-speaker-list>
                 </div>
               </section>
-            </paper-material> -->
+            </paper-material>
           </div>
         </main>
       </div>
