会場のリンクが間違ってる

--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </tr>
                       <tr>
                         <th>会場</th>
-                        <td><a href="2015/#!/venue">株式会社サイバーエージェント</a><br>〒150-0043 渋谷区道玄坂1丁目12番1号渋谷マークシティウエスト 13階</td>
+                        <td><a href="#!/venue">株式会社サイバーエージェント</a><br>〒150-0043 渋谷区道玄坂1丁目12番1号渋谷マークシティウエスト 13階</td>
                       </tr>
                       <tr>
                         <th>Hashtag</th>
