connpassへのリンクを解放

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   </div>
                 </div>
                 <div class="nf-buttons">
-                  <paper-button raised disabled class="nf-button nf-button--register  nf-button--disabled">イベントに参加する（Coming Soon）</paper-button>
+                  <a href="http://nodejs.connpass.com/event/20741/" target="_blank">
+                    <paper-button raised class="nf-button nf-button--register">イベントに参加する</paper-button>
+                  </a>
                 </div>
               </section>
             </paper-material>
