ustのリンク先を変更

--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                       </tr>
                       <tr>
                         <th>Ustream</th>
-                        <td><a href="http://www.ustream.tv/channel/nodefest2015a">トラックA</a> （全体含む）、<a href="http://www.ustream.tv/channel/nodefest2015b">トラックB</a></td>
+                        <td><a href="http://www.ustream.tv/channel/3tYrJLAYU7c">トラックA</a> （全体含む）、<a href="http://www.ustream.tv/channel/6yrsy6bdEbA">トラックB</a></td>
                       </tr>
                       <tr>
                         <th>無線LAN</th>
